Attempt to fix overflow issues in ev-block

--- a/src/components/EvGrid/EvBlock/EvBlock.scss
+++ b/src/components/EvGrid/EvBlock/EvBlock.scss
@@ -9,6 +9,7 @@
     flex-basis: 0;
     flex-grow: 1;
     max-width: 100%;
+    min-width: 0;
 }
 
 @each $breakpoint in map_keys(settings.$grid-breakpoints) {
